force-app/main/default/objects/loan__Automated_Payment_Setup__c/loan__Automated_Payment_Setup__c.object-meta.xml
<CustomObject>
    <label>Automated Payment Setup</label>
    <nameField>
        <displayFormat>APS-{0000000000}</displayFormat>
        <label>Automated Payment Setup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Automated Payment Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>