force-app/main/default/objects/loan__Automated_Payment_Setup__c/fields/loan__Amount_Type__c.field-meta.xml
<CustomField>
    <fullName>loan__Amount_Type__c</fullName>
    <label>Amount Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>loan__Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>FIXED AMOUNT</fullName>
            </value>
            <value>
                <fullName>LAST BILLED AMOUNT</fullName>
            </value>
            <value>
                <fullName>CURRENT PAYMENT AMOUNT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>