force-app/main/default/objects/loan__Automated_Payment_Setup__c/fields/loan__CL_Contract__c.field-meta.xml
<CustomField>
    <fullName>loan__CL_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CL Contract</label>
    <referenceTo>loan__Loan_Account__c</referenceTo>
    <relationshipLabel>Automated Payment Setup</relationshipLabel>
    <relationshipName>Automated_Payment_Setup</relationshipName>
    <type>Lookup</type>
</CustomField>