force-app/main/default/objects/loan__Automated_Payment_Setup__c/fields/loan__Debit_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Debit_Date__c</fullName>
    <label>Debit Date</label>
    <type>Date</type>
</CustomField>