force-app/main/default/objects/loan__Automated_Payment_Setup__c/fields/loan__Debit_Day__c.field-meta.xml
<CustomField>
    <fullName>loan__Debit_Day__c</fullName>
    <label>Debit Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>