force-app/main/default/objects/loan__Automated_Payment_Setup__c/fields/loan__Installment_Payment__c.field-meta.xml
<CustomField>
    <fullName>loan__Installment_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field determines whether this is installment payment or not</description>
    <inlineHelpText>This field determines whether this is installment payment or not</inlineHelpText>
    <label>Installment Payment</label>
    <type>Checkbox</type>
</CustomField>