force-app/main/default/objects/loan__Automated_Payment_Setup__c/fields/loan__Loan_Payment_Spread__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan_Payment_Spread__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select a manual payment spread for this Automated Payment Setup. Applicable only in case of ONE TIME payment setup.</inlineHelpText>
    <label>Loan Payment Spread</label>
    <referenceTo>loan__Loan_Payment_Spread__c</referenceTo>
    <relationshipLabel>Automated Payment Setups</relationshipLabel>
    <relationshipName>Automated_Payment_Setups</relationshipName>
    <type>Lookup</type>
</CustomField>