force-app/main/default/objects/loan__Automated_Payment_Setup__c/fields/loan__Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>loan__Payment_Mode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Mode</label>
    <referenceTo>loan__Payment_Mode__c</referenceTo>
    <relationshipLabel>Automated Payment Setup</relationshipLabel>
    <relationshipName>ACH_Setup</relationshipName>
    <type>Lookup</type>
</CustomField>