force-app/main/default/objects/loan__Automated_Payment_Setup__c/fields/loan__Recurring_ACH_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Recurring_ACH_Start_Date__c</fullName>
    <label>Recurring ACH Start Date</label>
    <type>Date</type>
</CustomField>