force-app/main/default/objects/loan__Automated_Payment_Setup__c/fields/loan__Retry__c.field-meta.xml
<CustomField>
    <fullName>loan__Retry__c</fullName>
    <inlineHelpText>If enabled, we will retry a rejected payment as per the retry configuration.</inlineHelpText>
    <label>Retry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enabled</fullName>
            </value>
            <value>
                <fullName>Disabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>