force-app/main/default/objects/loan__Automated_Payment_Setup__c/fields/loan__Transaction_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Transaction_Amount__c</fullName>
    <label>Transaction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>