force-app/main/default/objects/loan__Automated_Payment_Setup__c/recordTypes/loan__RECURRING.recordType-meta.xml
<RecordType>
    <fullName>loan__RECURRING</fullName>
    <active>true</active>
    <label>RECURRING</label>
</RecordType>