force-app/main/default/objects/loan__Automated_Payment_Setup__c/validationRules/Bank_Account_Active_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Bank_Account_Active_check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Not(loan__Bank_Account__r.loan__Active__c), loan__Active__c )</errorConditionFormula>
    <errorMessage>Please Select/update an Active Bank Account.</errorMessage>
</ValidationRule>