force-app/main/default/objects/loan__Automated_Payment_Setup__c/validationRules/Bank_Account_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Bank_Account_Check</fullName>
    <active>true</active>
    <errorConditionFormula>loan__Bank_Account__r.loan__Account__c  &lt;&gt;  loan__CL_Contract__r.loan__Account__c</errorConditionFormula>
    <errorDisplayField>loan__Bank_Account__c</errorDisplayField>
    <errorMessage>Bank Account is not valid for this Borrower.Please select the correct option.</errorMessage>
</ValidationRule>