force-app/main/default/objects/loan__Automated_Payment_Setup__c/validationRules/loan__ACH_Start_Date_greater_than_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__ACH_Start_Date_greater_than_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(loan__Type__c,&apos;RECURRING&apos;) , loan__Recurring_ACH_End_Date__c  &lt; loan__Recurring_ACH_Start_Date__c )</errorConditionFormula>
    <errorMessage>ACH End Date should be greater than ACH Start Date</errorMessage>
</ValidationRule>