force-app/main/default/objects/loan__Automated_Payment_Setup__c/validationRules/loan__Debit_Day_must_not_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Debit_Day_must_not_be_null</fullName>
    <active>true</active>
    <errorConditionFormula>loan__Debit_Day__c == NULL
&amp;&amp;
ISPICKVAL(loan__Type__c, &apos;RECURRING&apos;)</errorConditionFormula>
    <errorMessage>Debit Day must not be null.</errorMessage>
</ValidationRule>