force-app/main/default/objects/loan__Automated_Payment_Setup__c/validationRules/loan__Frequency_check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Frequency_check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(loan__Type__c,&apos;RECURRING&apos;),OR(ISNULL(TEXT(loan__Frequency__c)),ISBLANK(TEXT(loan__Frequency__c))))</errorConditionFormula>
    <errorDisplayField>loan__Frequency__c</errorDisplayField>
    <errorMessage>Frequency can not be null for &apos;Recurring&apos; type.</errorMessage>
</ValidationRule>