force-app/main/default/objects/loan__Automated_Payment_Setup__c/validationRules/loan__Frequency_Cycle_Input_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Frequency_Cycle_Input_Validation</fullName>
    <active>true</active>
    <description>Frequency Cycle can not be less than or equal to zero
Frequency Cycle is allowed only for Monthly, Daily and Weekly Frequencies</description>
    <errorConditionFormula>AND( NOT( ISNULL(loan__Frequency_Cycle__c) ) ,OR(loan__Frequency_Cycle__c &lt;= 0 , AND( loan__Frequency_Cycle__c &gt; 1,OR(ISPICKVAL(loan__Frequency__c, &apos;Bi-weekly&apos;),
ISPICKVAL(loan__Frequency__c, &apos;Semi-Monthly&apos;),
ISPICKVAL(loan__Frequency__c, &apos;Bi-Monthly&apos;),
ISPICKVAL(loan__Frequency__c, &apos;Quarterly&apos;),
ISPICKVAL(loan__Frequency__c, &apos;Semi-Annual&apos;),
ISPICKVAL(loan__Frequency__c, &apos;Annual&apos;),
ISPICKVAL(loan__Frequency__c, &apos;Billing Frequency&apos;),
ISPICKVAL(loan__Frequency__c, &apos;Single-Payment&apos;)))))</errorConditionFormula>
    <errorDisplayField>loan__Frequency_Cycle__c</errorDisplayField>
    <errorMessage>Kindly Add correct Value for Frequency Cycle , Either value is less than or equal to zero, or selected Payment Frequency is not supported.</errorMessage>
</ValidationRule>