force-app/main/default/objects/loan__Automated_Payment_Setup__c/validationRules/loan__Type_cannot_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Type_cannot_be_null</fullName>
    <active>true</active>
    <description>Type should always be present</description>
    <errorConditionFormula>OR(ISBLANK(TEXT(loan__Type__c)), ISNULL(TEXT(loan__Type__c)))</errorConditionFormula>
    <errorMessage>Type must not be null.</errorMessage>
</ValidationRule>